[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menus/ControllerDeadZone.gd" type="Script" id=1]

[node name="ControllerDeadZone" type="HBoxContainer"]
margin_top = 24.0
margin_right = 215.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 1.0
margin_right = 136.0
margin_bottom = 15.0
text = "Controller Dead Zone"

[node name="HSlider" type="HSlider" parent="."]
margin_left = 140.0
margin_right = 215.0
margin_bottom = 16.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 3
max_value = 1.0
step = 0.1
value = 0.2

[connection signal="drag_ended" from="HSlider" to="." method="_on_HSlider_drag_ended"]
[connection signal="drag_started" from="HSlider" to="." method="_on_HSlider_drag_started"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
